--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>Jordan History</h2>
               <br/>
-                <p>Air Jordan was released by Nike in 1984 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>Air Jordan was released by Nike in 1984 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
                 <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
                 <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
