--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,8 +5,8 @@
               <br/><br/>
               <h2>Jordan History</h2>
               <br/>
-                <p>Air Jordan was released by Nike in 1984 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
+                <p>Air Jordan was released by Nike in 1985 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>.<br/> 
+                <p>에어 조던은 1985년 나이키에서 발매해 현재까지 다양한 시리즈를 탄생시켰으며 많은 사랑을 받고있습니다 <a href="https://www.instagram.com/explore/tags/%EC%A1%B0%EB%8D%98/">photo</a></p>
                 <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
                 <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
                 <br/>
