--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,8 +7,8 @@
               <br/>
                 <p>Air Jordan was released by Nike in 1985 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>.<br/> 
                 <p>에어 조던은 1985년 나이키에서 발매해 현재까지 다양한 시리즈를 탄생시키며 많은 사랑을 받고있습니다 <a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98">namu wiki</a></p><br/>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Air Jordan is a shoe and clothing brand for Michael Jordan and guaranteed by Michael Jordan. In the past, it was Nike's brand, but now it is being released through the Jordan brand as the Jordan brand has become an independent brand under Nike.</p>
+                <p>에어 조던은 마이클 조던을 위한 그리고 마이클 조던이 보증하는 신발 및 의류 브랜드입니다. 과거에는 나이키의 브랜드였으나, 현재는 조던 브랜드가 나이키 산하의 독립 브랜드로 분화되면서 조던 브랜드를 통해 발매되고 있습니다.</p>
                 <br/>
               </div>
         </div>
