--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
               <h2>Jordan History</h2>
               <br/>
                 <p>Air Jordan was released by Nike in 1985 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>.<br/> 
-                <p>에어 조던은 1985년 나이키에서 발매해 현재까지 다양한 시리즈를 탄생시키며 많은 사랑을 받고있습니다. <a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98">namu wiki</a></p><br/>
+                <p>에어 조던은 1985년 나이키에서 발매해 현재까지 다양한 시리즈를 탄생시키며 많은 사랑을 받고있습니다.<br/> <a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98">namu wiki</a></p><br/>
                 <p>Air Jordan is a shoe and clothing brand for Michael Jordan and guaranteed by Michael Jordan.<br/>
                     In the past, it was Nike's brand,but now it is being released through the Jordan brand as the Jordan brand has become an independent brand under Nike.</p>
                     
