--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Jordan History</h2>
+              <h2>Jordan History.</h2>
               <br/>
                 <p>Air Jordan was released by Nike in 1985 and has been loved for producing various series.<a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98"><br/>namu wiki page</a>.<br/> 
                 <p>에어 조던은 1985년 나이키에서 발매해 현재까지 다양한 시리즈를 탄생시키며 많은 사랑을 받고있습니다.<br/> <a href="https://namu.wiki/w/%EC%97%90%EC%96%B4%20%EC%A1%B0%EB%8D%98">namu wiki page</a></p><br/>
