--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,11 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">About</a>
+                        <a href="#about">History</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#services">Product</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
