--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#about">History</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Product</a>
+                    <a class="page-scroll" href="#services">Detail</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
